# NLP100

./: .gitignore  Makefile  README.md  chap03-nb01-history.txt  create_chap_dirs.sh  pyproject.toml
chap01/: nb01.ipynb
chap02/: 10_wc.sh  11_replace_tab2space.sh  12_cut.sh  13_paste.sh  14_head.sh  15_tail.sh  16_split.sh  17_uniq_sort.sh  18_sort.sh  nb01.ipynb
chap03/: nb01.ipynb
data/: col1.txt  col2.txt  merged.txt  paste.txt
